--- a/index.html
+++ b/index.html
@@ -8,7 +8,25 @@
 </head>
 <body>
     
-<div id="container"></div>
+
+
+<div class="main-container">
+    <div class="sidebar">
+        <input type="color" id="colorpicker" value="#000000">
+        <button id="erase">Erase</button>
+        <button id="reset">Shake</button>
+     </div>
+</div>
+
+<div class="grid">
+    <div id="container">  
+    </div>
+</div>
+
+<div class="bottom">
+    <input type="range" min="1" max="100" value="16" id="sizeSlider">
+    <div id="sizeValue">16 x 16</div>
+  </div>
 
 <script src="script.js"></script>
 </body>
