--- a/index.html
+++ b/index.html
@@ -8,26 +8,26 @@
 </head>
 <body>
 
-<div id="main-container"> 
+<div class="main-container"> 
 
-  <div id="reset-container">
-    <button id="reset">Shake</button>
+  <div class="reset-container">
+    <button class="reset">Shake</button>
   </div>
 
-  <div id="middle">
-    <div id="sidebar">
-      <input type="color" id="colorpicker" value="#000000">
-      <button id="erase">Erase</button>
+  <div class="middle">
+    <div class="sidebar">
+      <input type="color" class="colorpicker" value="#000000">
+      <button class="erase">Erase</button>
     </div>
 
-    <div id="grid">
-      <div id="container"></div>
+    <div class="grid">
+      <div class="container"></div>
     </div>
   </div>
 
-  <div id="bottom">
-    <input type="range" min="16" max="100" value="16" id="sizeSlider">
-    <div id="sizeValue">16 x 16</div>
+  <div class="bottom">
+    <input type="range" min="16" max="100" value="16" class="sizeSlider">
+    <div class="sizeValue">16 x 16</div>
   </div>
 
 </div>
@@ -35,4 +35,3 @@
 <script src="script.js"></script>
 </body>
 </html>
-
