add rainbow button

--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
     <div class="sidebar">
       <input type="color" class="colorpicker" value="#000000">
       <button class="erase">Erase</button>
+      <button class="rainbow">Rainbow</button>
+
     </div>
 
     <div class="grid">
