add button for starmode

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <input type="color" class="colorpicker" value="#000000">
       <button class="erase">Erase</button>
       <button class="rainbow">Rainbow</button>
-
+      <button class="star-mode-button">★</button> <!-- Knapp för Star Mode -->
     </div>
 
     <div class="grid">
